# middleware-web-apps

./: LICENSE  README.md
go/client/: go.mod  main.go
go/client/middleware/: client_transport.go
go/server/: go.mod  main.go
go/server/middleware/: auth.go
javascript/client/using-axios/: .eslintrc.cjs  client.js  client_unsuccessful.js  interceptors.js  package-lock.json  package.json
javascript/server/using-express/: index.js  package-lock.json  package.json
python/client/using-aiohttp/: client.py  pyproject.toml
python/client/using-requests/: client.py  pyproject.toml
python/server/using-fastapi/: app.py  auth_header_check.py  pyproject.toml  run_server.sh
python/server/using-flask/: app.py  auth_header_check.py  pyproject.toml
