[tool.poetry]
name = "using-aiohttp"
version = "0.1.0"
description = ""
authors = ["Amit Saha <mail@echorand.me>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
